--- a/index.html
+++ b/index.html
@@ -54,3 +54,8 @@ layout: default
   {% endfor %}
 
 {% endif %}
+
+  <script rel='javascript'>
+    var toastHTML = "<span>This is the new website that's uner construction.</span><button class='btn-flat toast-action'>Return to full site</button>";
+    M.toast({html: toastHTML});
+  </script>
