--- a/404.html
+++ b/404.html
@@ -6,19 +6,6 @@
     <meta http-equiv='Cache-control' content='public'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no'>
     <title>404 Page not found</title>
-    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css'>
-    <!-- Favicon -->
-    <link rel='apple-touch-icon' sizes='180x180' href='/favicon/apple-touch-icon.png'>
-    <link rel='icon' type='image/png' sizes='32x32' href='/favicon/favicon-32x32.png'>
-    <link rel='icon' type='image/png' sizes='192x192' href='/favicon/android-chrome-192x192.png'>
-    <link rel='icon' type='image/png' sizes='16x16' href='/favicon/favicon-16x16.png'>
-    <link rel='manifest' href='/favicon/site.webmanifest'>
-    <link rel='mask-icon' href='/favicon/safari-pinned-tab.svg' color='#ff0000'>
-    <link rel='shortcut icon' href='/favicon/favicon.ico'>
-    <meta name='msapplication-TileColor' content='#ff0000'>
-    <meta name='msapplication-TileImage' content='/favicon/mstile-144x144.png'>
-    <meta name='msapplication-config' content='/favicon/browserconfig.xml'>
-    <meta name='theme-color' content='#ffffff'>
     <style>
       /* Copyright 2013 The Chromium Authors. All rights reserved. * Use of this source code is governed by a BSD-style license that can be * found in the LICENSE file. */
 
@@ -402,9 +389,8 @@
     </section>
     <br>
     <center>
-      <a href='/' class='btn btn-flat'>Return home</a>
+      <a href='/' class='btn'>Return home</a>
     </center>
-    <script rel='javascript' type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js'></script>
     <script type='text/javascript'>
       (function() {
         var link_element = document.createElement('link'),
