--- a/404.html
+++ b/404.html
@@ -375,7 +375,7 @@
     <header id='main-frame-error' class='interstitial-wrapper __wrapper'>
       <div id='main-content'>
         <h1>404 Page not found</h1>
-        <p>Looks like you've ran into a non-existant page. Might as well play this totally symbolic and historically accurite game.</p>
+        <p>Looks like you've ran into a non-existant page. Might as well play this totally symbolic and historically accurate game.</p>
       </div>
     </header>
     <section id='offline-resources'>
