--- a/404.html
+++ b/404.html
@@ -1,22 +1,11 @@
 ---
-layout: default
+title: Not Found
+call_to_action: Contact
+background_image_path:
+large_header: false
+show_in_navigation: false
+permalink: /404.html
+sitemap: false
 ---
-<style type='text/css' media='screen'>
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
 
-<div class='container'>
-  <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<p>This page doesn't exist.</p>
