--- a/404.html
+++ b/404.html
@@ -7,5 +7,5 @@ show_in_navigation: false
 permalink: /404.html
 sitemap: false
 ---
-
-<p>This page doesn't exist.</p>
+# 404 error failed succesfuly
+This page doesn't exist.
