Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: Not Found
+title: Error 404 page not Found
 call_to_action: Contact
 background_image_path:
 large_header: false
@@ -7,5 +7,4 @@ show_in_navigation: false
 permalink: /404.html
 sitemap: false
 ---
-# 404 error failed succesfuly
-This page doesn't exist.
+Error failed succesfuly
