--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ call_to_action: Contact
 background_image_path:
 large_header: true
 testimonials:
-  - message: We use Justice Law in all our endeavours. They offer an unparalleled service when it comes to running a business.
+  - message: After years of searching for a good church, I found one. <em>the</em> one.
     image: "//placekitten.com/g/60/60?a=.png"
     name: Joice Carmold
-  - message: Justice Law are the best of the best. Being local, they care about people and have strong ties to the community.
+  - message: Great
     image: "//fillmurray.com/60/60?a=.png"
     name: Peter Rottenburg
-  - message: Justice Law were everything we could have hoped for when buying our first home. Highly recommended to all.
+  - message: Highly recommended to all.
     image: "//placebear.com/60/60?a=.png"
     name: D. and G. Gibbleston
 _options:
