Updated 'services.html' via CloudCannon

--- a/services.html
+++ b/services.html
@@ -8,5 +8,21 @@ navigation_order: 2
 ---
 
 <div class="editable">
-		
-	</div>
+    <table>
+      <tr>
+        <th>Sunday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+      </tr>
+      <tr>
+        <td>9:30am</td>
+        <td>7:00pm</td>
+        <td>7:00pm</td>
+      </tr>
+      <tr>
+        <td>5:30pm</td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+</div>
