--- a/about.html
+++ b/about.html
@@ -9,11 +9,8 @@ navigation_order: 1
 
 <div class="editable">
 	<p>
-		Serving your community for over a century, Justice Law is committed to helping people through a number of services.
-		Our services range from conveyancing, mortgages to family law. Our clients range from large businesses to first home buyers.
+		Our Pastor
 	</p>
-
-	<p>Meet the members of our capable team:</p>
 </div>
 
 <p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Update Staff Members</a></p>
@@ -28,7 +25,7 @@ navigation_order: 1
 				<ul class="staff-info">
 					<li>{{ member.name }}</li>
 					<li><small>{{ member.credentials }}</small></li>
-					<li><a href="tel:{{ site.data.company.contact_phone_number }}">{{ site.data.company.contact_phone_number }}</a>  ext {{ member.phone_extension }}</li>
+					<li><a href="tel:{{ site.data.company.contact_phone_number }}">{{ site.data.company.contact_phone_number }}</a>  {{ member.email }}</li>
 				</ul>
 			</div>
 
