--- a/about.html
+++ b/about.html
@@ -1,20 +1,29 @@
 ---
 title: About
-call_to_action: Contact
-background_image_path:
-large_header: false
-show_in_navigation: true
-navigation_order: 1
+description: We've built an amazing team of developers, marketers, designers and sales people.
+image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
 
-<div class="editable">
-    <h2>What is truth?</h2>
-
-	<p>This has been a question asked down through the ages of time, and yet people are still in search of the answer. When the bruised and battered Jesus stood before Pilate at His trial, Pilate asked, &ldquo;What is truth?&rdquo; (John 18:38)</p>
-	<p>Is truth a tradition or religion that has been passed on by family or friends? Is truth a philosophy or theory told by man? Is truth proclaimed by our political leaders of today? Just what is truth? According to John 17:17, &ldquo;Thy Word is truth.&rdquo; Psalm 25:10 states, &ldquo;All the paths of the Lord are mercy and truth.&rdquo; Jesus also stated in John 14:6, &ldquo;I am the way, the truth, and the life.&rdquo; Therefore we can rightfully say that the truth is in the Word of God.</p>
-	<p>Here at Life Tabernacle, we believe the Bible is truth, and that all Scripture is given by inspiration of God. (Ⅱ Timothy 3:16)</p>
-	<p>The Word tells us there is only one God who was &ldquo;manifest in flesh&rdquo; (Son of God) and dwells within us (Holy Ghost/Holy Spirit). The name of the Father, Son, and Holy Ghost is Jesus. (Deuteronomy 6:4, Ⅰ Timothy 3:16, John 5:43, Matthew 1:21&ndash;23, John 14:26)</p>
-	<p>We believe that salvation comes through believing and obeying the Gospel (Acts 2:38). Repentance (Death), baptism in Jesus' name (Burial), and the infilling of the Holy Ghost (Resurrection) were commanded by the Apostles and are still valid today.</p>
-	<p>We believe in living separated and consecrated lives to our Savior. (Romans 12:1&ndash;2, Ⅰ Peter 2:9, Ⅰ John 2:15)</p>
-	<p>We here at Life Tabernacle simply just want to follow the truth. If it's not in the Word of God, then it's not the truth. If you would like to have a free home Bible study on truth, please contact us at (559) 781&ndash;8068. We would love to hear from you.</p>
+<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+	<div class="inner-hero text-container">
+		<div class="hero-text-container">
+			<h1 class="editable">Our Story</h1>
+			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+		</div>
 	</div>
+</section>
+
+<section class="pad">
+	<div class="container">
+		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
+		<ul class="staff">
+			{% for person in site.staff_members %}
+				<li>
+					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
+					<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a></div>
+					<div class="position">{{ person.position }}</div>
+				</li>
+			{% endfor %}
+		</ul>
+	</div>
+</section>
