--- a/404.html
+++ b/404.html
@@ -1,10 +1,7 @@
 ---
-title: Error 404 page not Found
-call_to_action: Contact
-background_image_path:
-large_header: false
-show_in_navigation: false
+title: Not Found
+description: This page doesn't exist!
+image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 permalink: /404.html
-sitemap: false
+layout: page
 ---
-Error failed succesfuly
