--- a/contact-success.html
+++ b/contact-success.html
@@ -1,12 +1,5 @@
 ---
 title: Contact Success
-call_to_action: Advice
-background_image_path:
-large_header: false
-show_in_navigation: false
-sitemap: false
+description: Your message has been sent. We'll be in touch soon.
+image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 ---
-
-<p class="editable">
-	Thank you for reaching out, we'll read your message and be in contact as soon as possible.
-</p>
