--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Home
 description: 
 image: https://source.unsplash.com/AeABkasP-24/
-bottom_image: https://unsplash.it/2000/1322?a=.png
+bottom_image: https://source.unsplash.com/W8Qqn1PmQH0/
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
