--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ bottom_image: https://source.unsplash.com/W8Qqn1PmQH0/
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1>{{ site.title }}</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
+			<p class="subtext editable"></p>
 			<div class="cta button alt"><a href="#">Join Now</a></div>
 		</div>
 	</div>
