Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ bottom_image: https://source.unsplash.com/W8Qqn1PmQH0/
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1>{{ site.title }}</h1>
-			<p class="subtext editable"></p>
+			<p class="subtext editable">{{ site.description }}</p>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
