--- a/index.html
+++ b/index.html
@@ -4,59 +4,59 @@ image: https://source.unsplash.com/AeABkasP-24/
 bottom_image: https://source.unsplash.com/W8Qqn1PmQH0/
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
-	<div class="inner-hero text-container">
-		<div class="hero-text-container">
+<section class='hero' style='background-image: url({% include relative-src.html src=page.image %})'>
+	<div class='inner-hero text-container'>
+		<div class='hero-text-container'>
 			<h1>{{ site.title }}</h1>
-			<p class="subtext editable">{{ site.description }}</p>
+			<p class='subtext editable'>{{ site.description }}</p>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+	<div class='learn-more'><a href='#learn-more'>Learn more <span class='arrow'>&#x25BC;</span></a></div>
 </section>
 
-<div class="content">
-	<section class="info" id="learn-more">
-		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+<div class='content'>
+	<section class='info' id='learn-more'>
+		<div class='container flex'>
+			<div class='text'>
+				<h2 class='editable'>Introduce yourself</h2>
+				<p class='editable'>Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
 			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
-			</div>
-		</div>
-	</section>
-
-	<section class="info">
-		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
-			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			<div class='image'>
+				<img class='editable' src='http://placehold.it/650x1300' alt='Screenshot' />
 			</div>
 		</div>
 	</section>
 
-	<section class="info">
-		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+	<section class='info'>
+		<div class='container flex'>
+			<div class='text'>
+				<h2 class='editable'>Pick your interests</h2>
+				<p class='editable'>The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
 			</div>
-			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+			<div class='image'>
+				<img class='editable' src='http://placehold.it/650x1300' alt='Screenshot' />
 			</div>
 		</div>
 	</section>
 
-	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
-		<div class="inner-hero text-container">
-			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+	<section class='info'>
+		<div class='container flex'>
+			<div class='text'>
+				<h2 class='editable'>Swipe and go</h2>
+				<p class='editable'>Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+			</div>
+			<div class='image'>
+				<img class='editable' src='http://placehold.it/650x1300' alt='Screenshot' />
+			</div>
+		</div>
+	</section>
+
+	<section class='hero' style='background-image: url({% include relative-src.html src=page.bottom_image %})'>
+		<div class='inner-hero text-container'>
+			<div class='hero-text-container'>
+				<h2 class='editable'>Get in contact</h2>
+				<p class='subtext editable'>Free Bible studies and transportation upon request!</p>
+				<div class='cta button alt'><a href='#'>Contact</a></div>
 			</div>
 		</div>
 	</section>
