--- a/index.html
+++ b/index.html
@@ -1,63 +1,376 @@
----
-title: Home
-image: https://source.unsplash.com/AeABkasP-24/
-bottom_image: https://source.unsplash.com/W8Qqn1PmQH0/
----
+<!DOCTYPE HTML>
+<html>
+	<head>
+	<meta charset='utf-8'>
+		<title>Life Tabernacle</title>
+		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
+		<link rel='stylesheet' href='assets/css/main.css'>
+		<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.0/css/all.css' integrity='sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y' crossorigin='anonymous'>
+		<noscript><link rel='stylesheet' href='assets/css/noscript.css'></noscript>
+	</head>
+	<body class='is-preload'>
+		<!-- Wrapper -->
+			<div id='wrapper'>
 
-<section class='hero' style='background-image: url({% include relative-src.html src=page.image %})'>
-	<div class='inner-hero text-container'>
-		<div class='hero-text-container'>
-			<h1>{{ site.title }}</h1>
-			<p class='subtext editable'>{{ site.description }}</p>
-		</div>
-	</div>
-	<div class='learn-more'><a href='#learn-more'>Learn more <span class='arrow'>&#x25BC;</span></a></div>
-</section>
+				<!-- Header -->
+					<header id='header'>
+						<div class='logo'>
+							<span class='fas fa-church'></span>
+						</div>
+						<div class='content'>
+							<div class='inner'>
+								<h1>Life Tabernacle</h1>
+								<p>We here at Life Tabernacle simply just want to follow the truth.</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href='#schedule'>Schedule</a></li>
+								<li><a href='#about'>About</a></li>
+								<li><a href='#contact'>Contact</a></li>
+								<!--<li><a href='#elements'>Elements</a></li>-->
+							</ul>
+						</nav>
+					</header>
 
-<div class='content'>
-	<section class='info' id='learn-more'>
-		<div class='container flex'>
-			<div class='text'>
-				<h2 class='editable'>Introduce yourself</h2>
-				<p class='editable'>Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
-			</div>
-			<div class='image'>
-				<img class='editable' src='http://placehold.it/650x1300' alt='Screenshot' />
-			</div>
-		</div>
-	</section>
+				<!-- Main -->
+					<div id='main'>
 
-	<section class='info'>
-		<div class='container flex'>
-			<div class='text'>
-				<h2 class='editable'>Pick your interests</h2>
-				<p class='editable'>The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
-			</div>
-			<div class='image'>
-				<img class='editable' src='http://placehold.it/650x1300' alt='Screenshot' />
-			</div>
-		</div>
-	</section>
+						<!-- Intro -->
+							<article id='schedule'>
+								<h2 class='major'>Schedule</h2>
+								<h3>Sunday</h3>
+								<p><strong>Sunday shcool:</strong> 9:30am<br>
+								<strong>Service:</strong> 5:30pm</p>
+								<h3>Tuesday</h3>
+								<p><strong>Prayer:</strong> 7:00pm</p>
+								<h3>Wednesday</h3>
+								<p><strong>Service:</strong> 7:00pm</p>
+							</article>
 
-	<section class='info'>
-		<div class='container flex'>
-			<div class='text'>
-				<h2 class='editable'>Swipe and go</h2>
-				<p class='editable'>Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
-			</div>
-			<div class='image'>
-				<img class='editable' src='http://placehold.it/650x1300' alt='Screenshot' />
-			</div>
-		</div>
-	</section>
+							<article id='about'>
+								<h2 class='major'>What is truth?</h2>
+								<p>This has been a question asked down through the ages of time, and yet
+			            people are still in search of the answer. When the bruised and battered
+			            Jesus stood before Pilate at His trial, Pilate asked, &ldquo;What is
+			            truth?&rdquo; &lpar;John 18&#58;38&rpar;</p>
+		          	<p class='flow-text'>Is truth a tradition or religion that has been passed on by family
+			            or friends? Is truth a philosophy or theory told by man? Is truth
+			            proclaimed by our political leaders of today? Just what is truth?
+			            According to John 17&#58;17, &ldquo;Thy Word is truth.&rdquo; Psalm
+			            25&#58;10 states, &ldquo;All the paths of the Lord are mercy and
+			            truth.&rdquo; Jesus also stated in John 14&#58;6, &ldquo;I am the
+			            way, the truth, and the life.&rdquo; Therefore we can rightfully say
+			            that the truth is in the Word of God.</p>
+			          <p class='flow-text'>Here at Life Tabernacle, we believe the Bible is truth, and that all
+			            Scripture is given by inspiration of God. &lpar;&#8545; Timothy 3&#58;16&rpar;</p>
+			          <p class='flow-text'>The Word tells us there is only one God who was &ldquo;manifest in
+			            flesh&rdquo; &lpar;Son of God&rpar; and dwells within us &lpar;Holy
+			            Ghost&#47;Holy Spirit&rpar;. The name of the Father, Son, and Holy
+			            Ghost is Jesus. &lpar;Deuteronomy 6&#58;4, &#8544; Timothy 3&#58;16,
+			            John 5&#58;43, Matthew 1&#58;21&ndash;23, John 14&#58;26&rpar;</p>
+			          <p class='flow-text'>We believe that salvation comes through believing and obeying the
+			            Gospel &lpar;Acts 2&#58;38&rpar;. Repentance &lpar;Death&rpar;, baptism
+			            in Jesus' name &lpar;Burial&rpar;, and the infilling of the Holy Ghost
+			            &lpar;Resurrection&rpar; were commanded by the Apostles and are still
+			            valid today.</p>
+			          <p class='flow-text'>We believe in living separated and consecrated lives to our Savior.
+			            &lpar;Romans 12&#58;1&ndash;2, &#8544; Peter 2&#58;9, &#8544; John
+			            2&#58;15&rpar;</p>
+			          <p class='flow-text'>We here at Life Tabernacle simply just want to follow the truth. If
+			            it's not in the Word of God, then it's not the truth. If you would
+			            like to have a free home Bible study on truth, please contact us at
+			            <a href='tel:1-559-781-8068'>&lpar;559&rpar; 781&ndash;8068</a>. We would love to hear from you.</p>
+							</article>
 
-	<section class='hero' style='background-image: url({% include relative-src.html src=page.bottom_image %})'>
-		<div class='inner-hero text-container'>
-			<div class='hero-text-container'>
-				<h2 class='editable'>Get in contact</h2>
-				<p class='subtext editable'>Free Bible studies and transportation upon request!</p>
-				<div class='cta button alt'><a href='#'>Contact</a></div>
+						<!-- Contact -->
+							<article id='contact'>
+								<h2 class='major'>Contact</h2>
+								<form method='post' action='#'>
+									<div class='fields'>
+										<div class='field half'>
+											<label for='name'>Name</label>
+											<input type='text' name='name' id='name' />
+										</div>
+										<div class='field half'>
+											<label for='email'>Email</label>
+											<input type='text' name='email' id='email' />
+										</div>
+										<div class='field'>
+											<label for='message'>Message</label>
+											<textarea name='message' id='message' rows='4'></textarea>
+										</div>
+									</div>
+									<ul class='actions'>
+										<li><input type='submit' value='Send Message' class='primary' /></li>
+										<li><input type='reset' value='Reset' /></li>
+									</ul>
+								</form>
+								<ul class='icons'>
+									<li><a href='mailto:lifetabporterville@gmail.com' class='icon fa-envelope'><span class='label'>Email</span></a></li>
+									<li><a href='tel:1-559-781-8068' class='icon fa-phone'><span class='label'>Phone</span></a></li>
+								</ul>
+							</article>
+
+						<!-- Elements -->
+							<article id='elements'>
+								<h2 class='major'>Elements</h2>
+
+								<section>
+									<h3 class='major'>Text</h3>
+									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href='#'>this is a link</a>.</p>
+									<hr />
+									<h2>Heading Level 2</h2>
+									<h3>Heading Level 3</h3>
+									<h4>Heading Level 4</h4>
+									<h5>Heading Level 5</h5>
+									<h6>Heading Level 6</h6>
+									<hr />
+									<h4>Blockquote</h4>
+									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<h4>Preformatted</h4>
+									<pre><code>i = 0;
+
+while (!deck.isInOrder()) {
+    print 'Iteration ' + i;
+    deck.shuffle();
+    i++;
+}
+
+print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+								</section>
+
+								<section>
+									<h3 class='major'>Lists</h3>
+
+									<h4>Unordered</h4>
+									<ul>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+									</ul>
+
+									<h4>Alternate</h4>
+									<ul class='alt'>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+									</ul>
+
+									<h4>Ordered</h4>
+									<ol>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Etiam vel felis viverra.</li>
+										<li>Felis enim feugiat.</li>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Etiam vel felis lorem.</li>
+										<li>Felis enim et feugiat.</li>
+									</ol>
+									<h4>Icons</h4>
+									<ul class='icons'>
+										<li><a href='#' class='icon fa-twitter'><span class='label'>Twitter</span></a></li>
+										<li><a href='#' class='icon fa-facebook'><span class='label'>Facebook</span></a></li>
+										<li><a href='#' class='icon fa-instagram'><span class='label'>Instagram</span></a></li>
+										<li><a href='#' class='icon fa-github'><span class='label'>Github</span></a></li>
+									</ul>
+
+									<h4>Actions</h4>
+									<ul class='actions'>
+										<li><a href='#' class='button primary'>Default</a></li>
+										<li><a href='#' class='button'>Default</a></li>
+									</ul>
+									<ul class='actions stacked'>
+										<li><a href='#' class='button primary'>Default</a></li>
+										<li><a href='#' class='button'>Default</a></li>
+									</ul>
+								</section>
+
+								<section>
+									<h3 class='major'>Table</h3>
+									<h4>Default</h4>
+									<div class='table-wrapper'>
+										<table>
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Description</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Item One</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Two</td>
+													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan='2'></td>
+													<td>100.00</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+
+									<h4>Alternate</h4>
+									<div class='table-wrapper'>
+										<table class='alt'>
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Description</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Item One</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Two</td>
+													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan='2'></td>
+													<td>100.00</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+								</section>
+
+								<section>
+									<h3 class='major'>Buttons</h3>
+									<ul class='actions'>
+										<li><a href='#' class='button primary'>Primary</a></li>
+										<li><a href='#' class='button'>Default</a></li>
+									</ul>
+									<ul class='actions'>
+										<li><a href='#' class='button'>Default</a></li>
+										<li><a href='#' class='button small'>Small</a></li>
+									</ul>
+									<ul class='actions'>
+										<li><a href='#' class='button primary icon fa-download'>Icon</a></li>
+										<li><a href='#' class='button icon fa-download'>Icon</a></li>
+									</ul>
+									<ul class='actions'>
+										<li><span class='button primary disabled'>Disabled</span></li>
+										<li><span class='button disabled'>Disabled</span></li>
+									</ul>
+								</section>
+
+								<section>
+									<h3 class='major'>Form</h3>
+									<form method='post' action='#'>
+										<div class='fields'>
+											<div class='field half'>
+												<label for='demo-name'>Name</label>
+												<input type='text' name='demo-name' id='demo-name' value='' placeholder='Jane Doe' />
+											</div>
+											<div class='field half'>
+												<label for='demo-email'>Email</label>
+												<input type='email' name='demo-email' id='demo-email' value='' placeholder='jane@untitled.tld' />
+											</div>
+											<div class='field'>
+												<label for='demo-category'>Category</label>
+												<select name='demo-category' id='demo-category'>
+													<option value=''>-</option>
+													<option value='1'>Manufacturing</option>
+													<option value='1'>Shipping</option>
+													<option value='1'>Administration</option>
+													<option value='1'>Human Resources</option>
+												</select>
+											</div>
+											<div class='field half'>
+												<input type='radio' id='demo-priority-low' name='demo-priority' checked>
+												<label for='demo-priority-low'>Low</label>
+											</div>
+											<div class='field half'>
+												<input type='radio' id='demo-priority-high' name='demo-priority'>
+												<label for='demo-priority-high'>High</label>
+											</div>
+											<div class='field half'>
+												<input type='checkbox' id='demo-copy' name='demo-copy'>
+												<label for='demo-copy'>Email me a copy</label>
+											</div>
+											<div class='field half'>
+												<input type='checkbox' id='demo-human' name='demo-human' checked>
+												<label for='demo-human'>Not a robot</label>
+											</div>
+											<div class='field'>
+												<label for='demo-message'>Message</label>
+												<textarea name='demo-message' id='demo-message' placeholder='Enter your message' rows='6'></textarea>
+											</div>
+										</div>
+										<ul class='actions'>
+											<li><input type='submit' value='Send Message' class='primary' /></li>
+											<li><input type='reset' value='Reset' /></li>
+										</ul>
+									</form>
+								</section>
+
+							</article>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id='footer'>
+					</footer>
+
 			</div>
-		</div>
-	</section>
-</div>
+
+		<!-- BG -->
+			<div id='bg'></div>
+
+		<!-- Scripts -->
+			<script src='assets/js/jquery.min.js'></script>
+			<script src='assets/js/browser.min.js'></script>
+			<script src='assets/js/breakpoints.min.js'></script>
+			<script src='assets/js/util.js'></script>
+			<script src='assets/js/main.js'></script>
+
+	</body>
+</html>
