--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 		<link rel='stylesheet' href='assets/css/main.css'>
 		<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.0/css/all.css' integrity='sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y' crossorigin='anonymous'>
 		<noscript><link rel='stylesheet' href='assets/css/noscript.css'></noscript>
+		<link rel='apple-touch-icon' sizes='180x180' href='/images/favicon/apple-touch-icon.png'>
+		<link rel='icon' type='image/png' sizes='32x32' href='/images/favicon/favicon-32x32.png'>
+		<link rel='icon' type='image/png' sizes='16x16' href='/images/favicon/favicon-16x16.png'>
+		<link rel='manifest' href='/images/favicon/site.webmanifest'>
+		<link rel='mask-icon' href='/images/favicon/safari-pinned-tab.svg' color='#536272'>
+		<link rel='shortcut icon' href='/images/favicon/favicon.ico'>
+		<meta name='msapplication-TileColor' content='#536272'>
+		<meta name='msapplication-config' content='/images/favicon/browserconfig.xml'>
+		<meta name='theme-color' content='#536272'>
 	</head>
 	<body class='is-preload'>
 		<!-- Wrapper -->
@@ -36,7 +45,7 @@
 				<!-- Main -->
 					<div id='main'>
 
-						<!-- Intro -->
+							<!-- Schedule -->
 							<article id='schedule'>
 								<h2 class='major'>Schedule</h2>
 								<h3>Sunday</h3>
@@ -48,6 +57,7 @@
 								<p><strong>Service:</strong> 7:00pm</p>
 							</article>
 
+						<!-- What we believe -->
 							<article id='about'>
 								<h2 class='major'>What is truth?</h2>
 								<p>This has been a question asked down through the ages of time, and yet
@@ -90,11 +100,11 @@
 									<div class='fields'>
 										<div class='field half'>
 											<label for='name'>Name</label>
-											<input type='text' name='name' id='name' />
+											<input type='text' name='name' id='name'>
 										</div>
 										<div class='field half'>
 											<label for='email'>Email</label>
-											<input type='text' name='email' id='email' />
+											<input type='text' name='email' id='email'>
 										</div>
 										<div class='field'>
 											<label for='message'>Message</label>
@@ -102,13 +112,13 @@
 										</div>
 									</div>
 									<ul class='actions'>
-										<li><input type='submit' value='Send Message' class='primary' /></li>
-										<li><input type='reset' value='Reset' /></li>
+										<li><input type='submit' value='Send Message' class='primary'></li>
+										<li><input type='reset' value='Reset'></li>
 									</ul>
 								</form>
 								<ul class='icons'>
-									<li><a href='mailto:lifetabporterville@gmail.com' class='icon fa-envelope'><span class='label'>Email</span></a></li>
-									<li><a href='tel:1-559-781-8068' class='icon fa-phone'><span class='label'>Phone</span></a></li>
+									<li><a href='mailto:lifetabporterville@gmail.com' class='fas fa-envelope'><span class='label'></span></a></li>
+									<li><a href='tel:1-559-781-8068' class='fas fa-phone'><span class='label'></span></a></li>
 								</ul>
 							</article>
 
