--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 	<head>
 	<meta charset='utf-8'>
@@ -37,6 +37,7 @@
 								<li><a href='#schedule'>Schedule</a></li>
 								<li><a href='#about'>About</a></li>
 								<li><a href='#contact'>Contact</a></li>
+								<li><a href='login/'>Login</a></li>
 								<!--<li><a href='#elements'>Elements</a></li>-->
 							</ul>
 						</nav>
@@ -363,7 +364,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
 							</article>
-
 					</div>
 
 				<!-- Footer -->
@@ -373,14 +373,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<div id='bg'></div>
-
+		<div id='bg'></div>
 		<!-- Scripts -->
-			<script src='assets/js/jquery.min.js'></script>
-			<script src='assets/js/browser.min.js'></script>
-			<script src='assets/js/breakpoints.min.js'></script>
-			<script src='assets/js/util.js'></script>
-			<script src='assets/js/main.js'></script>
+		<script src='assets/js/jquery.min.js'></script>
+		<script src='assets/js/browser.min.js'></script>
+		<script src='assets/js/breakpoints.min.js'></script>
+		<script src='assets/js/util.js'></script>
+		<script src='assets/js/main.js'></script>
 
 	</body>
 </html>
