--- a/login/register.html
+++ b/login/register.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang='e-USn'>
+<html lang='e-US'>
   <head>
-    <meta charset='UTF-8'>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes'>
     <title>Registration</title>
     <link rel='stylesheet' href='css/style.css'>
   </head>
