--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset='utf-8'>
 		<title>Life Tabernacle</title>
-		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<link rel='stylesheet' href='assets/css/main.css'>
 		<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.0/css/all.css' integrity='sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y' crossorigin='anonymous'>
 		<noscript><link rel='stylesheet' href='assets/css/noscript.css'></noscript>
