--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,7 @@
 <html lang='en-US'>
   <head>
     <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Login</title>
     <link rel='stylesheet' href='css/style.css'>
   </head>
