--- a/login/register.html
+++ b/login/register.html
@@ -2,7 +2,7 @@
 <html lang='e-US'>
   <head>
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Registration</title>
     <link rel='stylesheet' href='css/style.css'>
   </head>
