--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						</div>
 						<div class='content'>
 							<div class='inner'>
-								<h1>Life Tabernacle</h1>
-								<p>We here at Life Tabernacle simply just want to follow the truth.</p>
+								<h1><simpla-text>Life Tabernacle</simpla-text></h1>
+								<p><simpla-text>We here at Life Tabernacle simply just want to follow the truth.</simpla-text></p>
 							</div>
 						</div>
 						<nav>
