--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<article id='schedule'>
 								<h2 class='major'>Schedule</h2>
 								<h3>Sunday</h3>
-								<p><strong>Sunday shcool:</strong> 10:00am<br>
+								<p><strong>Sunday school:</strong> 10:00am<br>
 								<strong>Service:</strong> 6:00pm</p>
 								<h3>Tuesday</h3>
 								<p><strong>Prayer:</strong> 7:00pm</p>
