--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class='content'>
 							<div class='inner'>
 								<h1><simpla-text>Life Tabernacle</simpla-text></h1>
-								<p><simpla-text>We here at Life Tabernacle simply just want to follow the truth.</simpla-text></p>
+								<p><simpla-text>939 N Main St, Porterville, CA 93257</simpla-text></p>
 							</div>
 						</div>
 						<nav>
