--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 						<div class='content'>
 							<div class='inner'>
 								<h1><simpla-text>Life Tabernacle</simpla-text></h1>
-								<p><simpla-text>939 N Main St, Porterville, CA 93257</simpla-text></p>
+								<p><simpla-text><strong>Addresst</strong>939 N Main St, Porterville, CA 93257</simpla-text></p>
+								<p><simpla-text><strong>Mailing address</strong>1297 W. Henderson #260, Porterville, CA 93257</simpla-text></p>
 							</div>
 						</div>
 						<nav>
