--- a/index.html
+++ b/index.html
@@ -60,10 +60,15 @@
 
 							<!-- Schedule -->
 							<article id='schedule'>
+								<p>Covid-19 is highly contagious and is known to spread mainly from person to person contact.</p>
+								<p>By attending life tabernacle, you agree to abide by the procedures established by the church to protect attendees and staff, and you voluntarily assume the risk that you and/or your family maybe exposed to or infected by covid-19 at the church, in the church worship service, or in the nursery or sunday school.</p>
+								<p>You agree to assume all the risks of attendance and participation for you and your family, and you waive any liability against the church and any other parties.</p>
 								<h2 class='major'>Schedule</h2>
+								<h3>Saturday</h3>
+								<p><strike><strong>Service:</strong> 1:00pm</strike></p>
 								<h3>Sunday</h3>
 								<p><strong>Sunday school:</strong> 10:00am<br>
-								<strong>Service:</strong> 6:00pm</p>
+								<strong>Service:</strong> 4:00pm</p>
 								<h3>Tuesday</h3>
 								<p><strong>Prayer:</strong> 7:00pm</p>
 								<h3>Wednesday</h3>
