--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 								<p>You agree to assume all the risks of attendance and participation for you and your family, and you waive any liability against the church and any other parties.</p>
 								<h2 class='major'>Schedule</h2>
 								<h3>Saturday</h3>
-								<p><strike><strong>Service:</strong> 1:00pm</strike></p>
+								<p><strong>Service:</strong> 1:00pm</p>
 								<h3>Sunday</h3>
-								<p><strong>Sunday school:</strong> 10:00am<br>
+								<p><strike><strong>Sunday school:</strong> 10:00am</strike><br>
 								<strong>Service:</strong> 4:00pm</p>
 								<h3>Tuesday</h3>
-								<p><strong>Prayer:</strong> 7:00pm</p>
+								<p><strike><strong>Prayer:</strong> 7:00pm</strike></p>
 								<h3>Wednesday</h3>
 								<p><strong>Service:</strong> 7:30pm</p>
 							</article>
