--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 								<p><strike><strong>Sunday school:</strong> 10:00am</strike><br>
 								<strong>Service:</strong> 4:00pm</p>
 								<h3>Tuesday</h3>
-								<p><strike><strong>Prayer:</strong> 7:00pm</strike></p>
+								<p><strong>Prayer:</strong> 7:00pm</p>
 								<h3>Wednesday</h3>
-								<p><strong>Service:</strong> 7:30pm</p>
+								<p><strong>Service:</strong> 7:00pm</p>
 							</article>
 
 						<!-- What we believe -->
