--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<!-- Schedule -->
 							<article id='schedule'>
 								<p>Covid-19 is highly contagious and is known to spread mainly from person to person contact.</p>
-								<p>By attending life tabernacle, you agree to abide by the procedures established by the church to protect attendees and staff, and you voluntarily assume the risk that you and/or your family maybe exposed to or infected by covid-19 at the church, in the church worship service, or in the nursery or sunday school.</p>
+								<p>By attending Life Tabernacle, you agree to abide by the procedures established by the church to protect attendees and staff, and you voluntarily assume the risk that you and/or your family maybe exposed to or infected by covid-19 at the church, in the church worship service, or in the nursery or sunday school.</p>
 								<p>You agree to assume all the risks of attendance and participation for you and your family, and you waive any liability against the church and any other parties.</p>
 								<h2 class='major'>Schedule</h2>
 								<h3>Saturday</h3>
