--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
 								<p>By attending Life Tabernacle, you agree to abide by the procedures established by the church to protect attendees and staff, and you voluntarily assume the risk that you and/or your family maybe exposed to or infected by covid-19 at the church, in the church worship service, or in the nursery or sunday school.</p>
 								<p>You agree to assume all the risks of attendance and participation for you and your family, and you waive any liability against the church and any other parties.</p>
 								<h2 class='major'>Schedule</h2>
-								<h3>Saturday</h3>
-								<p><strong>Service:</strong> 1:00pm</p>
 								<h3>Sunday</h3>
-								<p><strike><strong>Sunday school:</strong> 10:00am</strike><br>
-								<strong>Service:</strong> 4:00pm</p>
+								<p><strong>Sunday school:</strong> 10:00am<br>
+								<strong>Service:</strong> 5:30pm</p>
 								<h3>Tuesday</h3>
 								<p><strong>Prayer:</strong> 7:00pm</p>
 								<h3>Wednesday</h3>
