--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
 								</ul>
 							</article>
 
+							<article id='hgr'>
+							</article>
+
 						<!-- Elements -->
 							<article id='elements'>
 								<h2 class='major'>Elements</h2>
