--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<article id='hgr'>
 								<h2 class='major'>Holy Ghost radio</h2>
 								<p class='flow-text'>You can listen in live during <a href='#schedule'>service hours</a> or tune into Holy Ghost radio in the meantime.</p>
-								<audio controls='' autoplay='' name='media'><source src="https://us9.streamingpulse.com/ssl/7010" type="audio/mpeg"></audio>
+								<audio controls><source src='https://us9.streamingpulse.com/ssl/7010' type='audio/mp3'></audio>
 							</article>
 
 						<!-- Elements -->
@@ -370,6 +370,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<script src='assets/js/breakpoints.min.js'></script>
 		<script src='assets/js/util.js'></script>
 		<script src='assets/js/main.js'></script>
-
+		<script src='assets/js/live.js'></script>
 	</body>
 </html>
